--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: npm install
-        uses: actions/npm@master
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
         with:
-          args: install --unsafe-perm
+          node-version: 12
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Vscode release plugin
         uses: JCofman/vscodeaction@master
         env:
